--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -83,6 +83,17 @@
         android:text="Rent Type : "
         android:textSize="19sp"/>
 
+    <TextView
+        android:id="@+id/datePickerId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="20dp"
+        android:text="Rent Date : "
+        android:textSize="19sp"/>
+
+
+
     </LinearLayout>
 
 </ScrollView>
