--- a/app/src/main/res/layout/recycler_row_item.xml
+++ b/app/src/main/res/layout/recycler_row_item.xml
@@ -3,15 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        app:cardCornerRadius="5dp"
+        app:cardCornerRadius="7dp"
         android:id="@+id/myCardViewId"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="365dp"
         app:cardElevation="3dp"
-        android:layout_margin="10dp"
+        android:layout_marginTop="2dp"
+        android:background="@color/white"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -21,78 +23,86 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:padding="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="5"
+                android:layout_weight="4.5"
                 android:scaleType="centerCrop"
                 android:id="@+id/ivImageId"
                 android:src="@drawable/image1"
-                android:layout_marginBottom="10dp"
                 />
 
             <LinearLayout
+                android:padding="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:weightSum="1"
-                android:layout_weight="1"
-                >
+                android:layout_weight="1.5">
                 
                 <LinearLayout
+                    android:layout_marginRight="2dp"
+                    android:background="@color/background"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:padding="2dp"
+                    android:padding="7dp"
                     android:orientation="vertical">
 
                     <TextView
-                        android:textColor="#A89898"
-                        android:textAlignment="center"
+                        android:layout_marginTop="1dp"
+                        android:background="@color/white"
+                        android:textColor="@color/black"
+                        android:gravity="center"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Rented Amount"
+                        android:text="Rent Fare"
                         android:textStyle="bold"
-                        android:textSize="15sp"
-                        />
+                        android:textSize="12sp"/>
 
                     <TextView
-                        android:layout_marginTop="1dp"
-                        android:textColor="#A89898"
-                        android:textAlignment="center"
+                        android:background="@color/white"
+                        android:layout_marginTop="3dp"
+                        android:textColor="@color/black"
+                        android:gravity="center"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:text="8000 BDT"
-                        android:textSize="15sp"
-                        android:id="@+id/tvRentAmountId"
-                        />
+                        android:textSize="17sp"
+                        android:textStyle="bold"
+                        android:id="@+id/tvRentAmountId"/>
 
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_marginRight="1dp"
+                    android:background="@color/background"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
-                    android:padding="2dp"
+                    android:padding="7dp"
                     android:orientation="vertical">
 
                     <TextView
+                        android:layout_marginTop="1dp"
+                        android:background="@color/white"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Location"
-                        android:textSize="15sp"
-                        android:textColor="#A89898"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        />
+                        android:textSize="12sp"
+                        android:textColor="@color/black"
+                        android:gravity="center"
+                        android:textStyle="bold"/>
 
                     <TextView
-                        android:layout_marginTop="1dp"
+                        android:background="@color/white"
+                        android:layout_marginTop="3dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:text="Maijdee"
-                        android:textSize="15sp"
-                        android:textColor="#A89898"
+                        android:textSize="17sp"
+                        android:textColor="@color/black"
                         android:textStyle="bold"
-                        android:textAlignment="center"
+                        android:gravity="center"
                         android:id="@+id/tvLocationId"
                         />
 
