--- a/app/src/main/res/layout/activity_account_verification.xml
+++ b/app/src/main/res/layout/activity_account_verification.xml
@@ -18,8 +18,30 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/emailVerificationTxViewId"
+                android:visibility="gone"
                 android:background="#737BCA"
                 android:layout_marginTop="30dp"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:gravity="center_horizontal"
+                android:text="Email Verification"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:visibility="gone"
+                android:id="@+id/verifyEmailButtonId"
+                android:padding="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Verify Email"/>
+
+            <TextView
+                android:background="#737BCA"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:textSize="30sp"
                 android:textStyle="bold"
@@ -55,9 +77,8 @@
                     android:layout_height="200dp"/>
 
                 <Button
-                    android:padding="15dp"
+                    android:padding="10dp"
                     android:layout_margin="15dp"
-                    android:textSize="20sp"
                     android:textStyle="bold"
                     android:onClick="chooseFrontImageBtn"
                     android:id="@+id/chooseFrontImageBtnId"
@@ -94,9 +115,8 @@
                     android:layout_height="200dp"/>
 
                 <Button
-                    android:padding="15dp"
+                    android:padding="10dp"
                     android:layout_margin="15dp"
-                    android:textSize="20sp"
                     android:textStyle="bold"
                     android:onClick="chooseBackImageBtn"
                     android:id="@+id/chooseBacktImageBtnId"
