--- a/app/src/main/res/menu/nav_menu_item.xml
+++ b/app/src/main/res/menu/nav_menu_item.xml
@@ -16,7 +16,7 @@
 
         <item
             android:id="@+id/accountVeriMenuId"
-            android:title="Account Verification"
+            android:title="Verification"
             android:icon="@drawable/ic_baseline_verified_24"/>
 
         <item
